CATEGORY SECTION COMPLETED JUST TO MAKE IN REFRESHING LEFT

--- a/src/app/admin/body/category/category-index/category-index.component.html
+++ b/src/app/admin/body/category/category-index/category-index.component.html
@@ -8,9 +8,8 @@
         <tr *ngFor= "let category of data;let id = index" >
             <td>{{ id+1  }}</td>
             <td>{{ category.name }}</td>
-            <td>{{ category.id }}</td>
             <td>
-                    <button class="btn btn-primary" >EDIT</button>
+                    <button class="btn btn-primary" (click)="edit(category.id)" >EDIT</button>
             </td>
             <td>
                     <button class="btn btn-danger" (click)="delete(category.id)" >DELETE</button>
