--- a/src/app/admin/body/subcategory/suv-category-index/suv-category-index.component.html
+++ b/src/app/admin/body/subcategory/suv-category-index/suv-category-index.component.html
@@ -1,1 +1,36 @@
-<p>suv-category-index works!</p>
+
+    <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Sub Categories</h5>
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Category</th>
+                                <th scope="col">Sub-Category</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor= "let data of datas;let id = index" >
+                                    <th scope="row">{{ id+1  }}</th>
+                                    <td>{{ data.name }}</td>
+                                    <td> {{ data.subcategory }}</td>
+                                    <td>
+                                            <button class="btn btn-primary" (click)="edit(data.id)" >
+                                                EDIT
+                                            </button>
+                                    </td>
+                                    <td>
+                                            <button class="btn btn-danger" (click)="delete(data.id)" >
+                                                    DELETE
+                                            </button>
+                                    </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>      
+            </div>
+        </div>
+    
