--- a/src/app/admin/footer/footer.component.html
+++ b/src/app/admin/footer/footer.component.html
@@ -20,14 +20,11 @@
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                        <i class="menu-icon icon-layers"></i><span>Layouts</span><i class="accordion-icon fas fa-angle-left"></i>
+                        <i class="menu-icon icon-layers"></i><span>SubCategory</span><i class="accordion-icon fas fa-angle-left"></i>
                     </a>
                     <ul class="sub-menu">
-                        <li><a href="layout-blank.html">Blank Page</a></li>
-                        <li><a href="layout-collapsed-sidebar.html">Collapsed Sidebar</a></li>
-                        <li><a href="layout-fixed-header.html">Fixed Header</a></li>
-                        <li><a href="layout-fixed-sidebar.html">Fixed Sidebar</a></li>
-                        <li><a href="layout-fixed-sidebar-header.html">Fixed Sidebar &amp; Header</a></li>
+                        <li><a [routerLink]="['\subcategory','\create']" >Add SubCategory</a></li>
+                        <li><a [routerLink]="['\subcategory']" >View SubCategory</a></li>
                     </ul>
                 </li>
                 <li>
