--- a/src/app/admin/body/subcategory/sub-category-edit/sub-category-edit.component.html
+++ b/src/app/admin/body/subcategory/sub-category-edit/sub-category-edit.component.html
@@ -1,1 +1,28 @@
-<p>sub-category-edit works!</p>
+
+<div class="row">
+        <div class="col-xl">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Add Sub-Category</h5>
+                    <form [formGroup]="SubcategoryForm" (ngSubmit)="UpdateData()">
+                            
+                        <div class="form-group">
+                            <input type="hidden" formControlName="id" id="id" class="form-control">
+                            <label for="CategoryId">Select Category</label>
+                            <select class="form-control custom-select" required formControlName="CategoryId" id="CategoryId">
+                                <option  *ngFor="let cat of category;let id = index;" value="{{ cat.id }}" >
+                                    {{ cat.name }}
+                                </option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="SubCategoryName">Sub-Category Name</label>
+                            <input type="text" class="form-control" formControlName="SubCategoryName" id="SubCategoryName" placeholder="Sub-Category"> 
+                        </div>
+                        
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
