CATEGORY ADN SUBCATEGORY DONE

--- a/src/app/admin/footer/footer.component.html
+++ b/src/app/admin/footer/footer.component.html
@@ -29,39 +29,20 @@
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                        <i class="menu-icon icon-brush"></i><span>Styles</span><i class="accordion-icon fas fa-angle-left"></i>
+                        <i class="menu-icon icon-layers"></i><span>Brand</span><i class="accordion-icon fas fa-angle-left"></i>
                     </a>
                     <ul class="sub-menu">
-                        <li><a href="style-typography.html">Typography</a></li>
-                        <li><a href="style-code.html">Code</a></li>
-                        <li><a href="style-tables.html">Tables</a></li>
-                        <li><a href="style-icons.html">Icons</a></li>
+                        <li><a [routerLink]="['\brand','\create']" >Add Brand</a></li>
+                        <li><a [routerLink]="['\brand']" >View Brand</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="javascript:void(0)">
-                        <i class="menu-icon icon-flash_on"></i><span>Components</span><i class="accordion-icon fas fa-angle-left"></i>
+                        <i class="menu-icon icon-layers"></i><span>Product</span><i class="accordion-icon fas fa-angle-left"></i>
                     </a>
                     <ul class="sub-menu">
-                        <li><a href="comp-alerts.html">Alerts</a></li>
-                        <li><a href="comp-badge.html">Badge</a></li>
-                        <li><a href="comp-breadcrumb.html">Breadcrumb</a></li>
-                        <li><a href="comp-buttons.html">Buttons</a></li>
-                        <li><a href="comp-btn-group.html">Button Group</a></li>
-                        <li><a href="comp-card.html">Card</a></li>
-                        <li><a href="comp-collapse.html">Collapse</a></li>
-                        <li><a href="comp-dropdowns.html">Dropdowns</a></li>
-                        <li><a href="comp-lists.html">List Group</a></li>
-                        <li><a href="comp-media-object.html">Media Object</a></li>
-                        <li><a href="comp-modal.html">Modal</a></li>
-                        <li><a href="comp-navs.html">Navs</a></li>
-                        <li><a href="comp-navbar.html">Navbar</a></li>
-                        <li><a href="comp-pagination.html">Pagination</a></li>
-                        <li><a href="comp-popovers.html">Popovers</a></li>
-                        <li><a href="comp-progress.html">Progress</a></li>
-                        <li><a href="comp-spinners.html">Spinners</a></li>
-                        <li><a href="comp-toasts.html">Toasts</a></li>
-                        <li><a href="comp-tooltips.html">Tooltips</a></li>
+                        <li><a [routerLink]="['\product','\create']" >Add Product</a></li>
+                        <li><a [routerLink]="['\product']" >View Product</a></li>
                     </ul>
                 </li>
                 <li>
