--- a/src/app/admin/body/category/category-edit/category-edit.component.html
+++ b/src/app/admin/body/category/category-edit/category-edit.component.html
@@ -1,10 +1,10 @@
-<form [formGroup]="CategoryForm" (ngSubmit)="UpdateData()" >
+<!-- <form [formGroup]="CategoryForm" (ngSubmit)="UpdateData()" >
     <table class="table table-responsive-lg">
         <thead>
             <tr>
                 <label>CATEGORY NAME</label>
                 <input type="text" formControlName="name" id="name" class="form-control">
-                <input type="hidden" formControlName="id" id="id" class="form-control">
+                
             </tr><br>
             <tr>
                 <button type="submit" id="form-submit" class="btn btn-danger">Send</button>
@@ -12,3 +12,24 @@
         </thead>
     </table>
 </form>
+ -->
+ 
+<div class="row">
+        <div class="col-xl">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Edit Category</h5>
+                    <form [formGroup]="CategoryForm" (ngSubmit)="UpdateData()">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Category Name</label>
+                            <input type="hidden" formControlName="id" id="id" class="form-control">
+                            <input type="text" class="form-control" formControlName="name" id="name" placeholder="Category">
+                            
+                        </div>
+
+                        <button type="submit" class="btn btn-danger">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
