--- a/src/app/admin/footer/footer.component.html
+++ b/src/app/admin/footer/footer.component.html
@@ -38,6 +38,15 @@
                 </li>
                 <li>
                     <a href="javascript:void(0)">
+                        <i class="menu-icon icon-layers"></i><span>Banner</span><i class="accordion-icon fas fa-angle-left"></i>
+                    </a>
+                    <ul class="sub-menu">
+                        <li><a [routerLink]="['\banner','\create']" >Add Banner</a></li>
+                        <li><a [routerLink]="['\banner']" >View Banner</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="javascript:void(0)">
                         <i class="menu-icon icon-layers"></i><span>Product</span><i class="accordion-icon fas fa-angle-left"></i>
                     </a>
                     <ul class="sub-menu">
