--- a/src/app/admin/body/product/product-create/product-create.component.html
+++ b/src/app/admin/body/product/product-create/product-create.component.html
@@ -22,16 +22,16 @@
                     </div>
                     <div class="form-group">
                         <label for="Quantity">Product Quantity</label>
-                        <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="Quantity"  placeholder="Product Quantity">
+                        <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="Quantity" min="0"  placeholder="Product Quantity">
                         
                     </div>
                     <div class="form-group">
                         <label for="Price">Product Price</label>
-                        <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="price" id="code" placeholder="Product Price">
+                        <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="price" min="0" id="code" placeholder="Product Price">
                     </div>
                     <div class="form-group">
                         <label for="Price">Product Discount Price</label>
-                        <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="discountprice"  placeholder="Product Discount Price">
+                        <input type="number" min="0" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="discountprice"  placeholder="Product Discount Price">
                     </div>
                     <div class="form-group" >
                         <label for="image">Product Image</label>
