--- a/src/app/admin/body/product/product-edit/product-edit.component.html
+++ b/src/app/admin/body/product/product-edit/product-edit.component.html
@@ -1,1 +1,105 @@
-<p>product-edit works!</p>
+<!-- 
+<div  class="alert alert-danger" >
+        <p>IMAGE SIZE ERROR # MB MAX</p>
+    </div> -->
+    <div class="row">
+        <div class="col-xl">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Edit Product</h5>
+                    <form [formGroup]="ProductForm" (ngSubmit)="collectData()">
+                        <div class="form-group">
+                            <label for="Name">Product Name</label>
+                            <input type="text" class="form-control" formControlName="name" id="name" placeholder="Product Name">
+                        </div>
+                        <div class="form-group">
+                            <label for="Description">Product Description</label>
+                            <input type="text" class="form-control" formControlName="Description" id="Description" placeholder="Product Description">
+                        </div>
+                        <div class="form-group">
+                            <label for="code">Product code</label>
+                            <input type="text" class="form-control" formControlName="code" placeholder="Product code">
+                        </div>
+                        <div class="form-group">
+                            <label for="Quantity">Product Quantity</label>
+                            <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="Quantity"  placeholder="Product Quantity">
+                            
+                        </div>
+                        <div class="form-group">
+                            <label for="Price">Product Price</label>
+                            <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="price" placeholder="Product Price">
+                        </div>
+                        <div class="form-group">
+                            <label for="Price">Product Discount Price</label>
+                            <input type="number" class="form-control" pattern="/^[1-9]+[0-9]*$/" formControlName="discountprice"  placeholder="Product Discount Price">
+                        </div>
+                        <div class="form-group" >
+                            <label for="image">Product Image</label><br>
+                            <img src="{{image}}" alt="wait image is loading" style="height: 20%; width: 20%;">
+                            <div class="custom-file">
+                                <input type="file" (change)="onFileSelected($event)" class="custom-file-input form-control" id="customFile">
+                                <input type="hidden"  formControlName="image" >
+                                <label class="custom-file-label" for="customFile">Choose file</label>
+                            </div> 
+                        </div>
+                        <div class="form-group">
+                            <label for="CategoryId">Select Product Category</label>
+                            <select class="form-control custom-select" required formControlName="CategoryId" id="CategoryId">
+                                <option  *ngFor="let cat of categorys;" value="{{ cat.id }}" >
+                                    {{ cat.name }}
+                                </option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="CategoryId">Select Product Sub-Category</label>
+                            <select class="form-control custom-select" required formControlName="SubCategoryId" id="SubCategoryId">
+                                <option  *ngFor="let subcategory of subcategorys;" value="{{ subcategory.id }}" >
+                                    {{ subcategory.subcategory }}
+                                </option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="CategoryId">Select Product Brand</label>
+                            <select class="form-control custom-select" required formControlName="BrandId" id="BrandId">
+                                <option  *ngFor="let brand of brands;" value="{{ brand.id }}" >
+                                    {{ brand.name }}
+                                </option>
+                            </select>
+                        </div>
+
+
+
+
+
+
+                        <div class="row">
+                            <div 
+                                class="toast fade show col-md-3 mx-auto"
+                                
+                                role="alert"
+                                aria-live="assertive"
+                                aria-atomic="true"
+                                *ngFor="let productImage of productImages;let id = index;" 
+                            >
+                                <div class="toast-header">
+                                    <strong class="mr-auto">{{id+1}}</strong>
+                                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" (click)="deleteImage(productImage.id,productImage.image)" >
+                                        <i class="fas fa-times"></i>
+                                    </button>
+                                </div>
+                                <div class="toast-body ">
+                                    <!-- <div class="" [hidden] ="!imageIsDeleteing"></div> -->
+                                    <img src="{{ productImage.image }}" style="height:20% !important; width:100%;" alt="image loadaing">
+                                </div>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary" [disabled] ="disable" >
+                                <span [hidden] ="!disable" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                                {{ disable ? 'Wait Please' : 'Update' }}
+                        </button>                       
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
