ssr tried --fail and banner done

--- a/src/app/admin/body/coupons/coupon-create/coupon-create.component.html
+++ b/src/app/admin/body/coupons/coupon-create/coupon-create.component.html
@@ -36,9 +36,9 @@
                                 required
                                 type="date"
                                 [readonly]="firstpickstartdate"
-                                (mouseover)="checkforstartpick()"
+                                (click)="checkforstartpick()"
                                 class="form-control"
-                                [(min)]="mindate"
+                                [min]="mindate"
                                 formControlName="ExpiryDate"
                             >
                             <!-- <br> -->
