--- a/src/app/admin/body/banner/banner-index/banner-index.component.html
+++ b/src/app/admin/body/banner/banner-index/banner-index.component.html
@@ -1,1 +1,32 @@
-<p>banner-index works!</p>
+
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Banners</h5>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Image</th>
+                            <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor= "let Banner of Banners;let ids = index" >
+                            <td >{{ ids+1  }}</td>
+                            <td >{{ Banner.title }}</td>
+                            <td >
+                                <img src="{{ Banner.image }}" style="height:100px;width:40%;" alt="image not found">
+                            </td>
+                            <td >
+                                <button class="btn btn-danger" (click)="delete(Banner.id)" >
+                                    Delete Product
+                                </button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>      
+        </div>
+    </div>
