--- a/src/app/admin/body/coupons/coupon-create/coupon-create.component.html
+++ b/src/app/admin/body/coupons/coupon-create/coupon-create.component.html
@@ -1,51 +1,77 @@
+<div class="row">
+  <div class="col-xl">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Add Coupon</h5>
+        <form [formGroup]="CouponForm" ngNativeValidate (ngSubmit)="onsubmit()">
+          <div class="form-group">
+            <label for="Name">Coupon Name</label>
+            <input
+              type="text"
+              required
+              class="form-control"
+              formControlName="name"
+              placeholder="Coupon Name"
+            />
+            <!-- <br> -->
+          </div>
 
-    <div class="row">
-        <div class="col-xl">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Add Coupon</h5>
-                    <form [formGroup]="CouponForm" ngNativeValidate (ngSubmit)="onsubmit()" >
-                        <div class="form-group">
-                            <label for="Name" >Coupon Name</label>
-                            <input type="text" required class="form-control" formControlName="name" placeholder="Coupon Name">
-                            <!-- <br> -->
-                        </div>
+          <div class="form-group">
+            <label>Coupon Minimum Amount To be Activated</label>
+            <input
+              type="number"
+              min="1"
+              required
+              class="form-control"
+              formControlName="minimun_discount_amount"
+              pattern="/^[1-9]+[0-9]*$/"
+              placeholder="Minimum Amount To be Activated"
+            />
+            <!-- <br> -->
+          </div>
 
-                        <div class="form-group">
-                            <label >Coupon Minimum Amount To be Activated</label>
-                            <input type="number" min="1" required  class="form-control" formControlName="minimun_discount_amount" pattern="/^[1-9]+[0-9]*$/" placeholder="Minimum Amount To be Activated">
-                            <!-- <br> -->
-                        </div>
+          <div class="form-group">
+            <label>Coupon Discount Percentage</label>
+            <input
+              type="number"
+              required
+              min="1"
+              pattern="/^[1-9]+[0-9]*$/"
+              class="form-control"
+              formControlName="discount_percent"
+              placeholder="Discount Percentage"
+            />
+            <!-- <br> -->
+          </div>
 
-                        <div class="form-group">
-                            <label >Coupon Discount Percentage</label>
-                            <input type="number" required min="1" pattern="/^[1-9]+[0-9]*$/" class="form-control" formControlName="discount_percent" placeholder="Discount Percentage">
-                            <!-- <br> -->
-                        </div>
+          <div class="form-group">
+            <label>Coupon Start date</label>
+            <input
+              type="date"
+              required
+              (change)="startpick($event)"
+              class="form-control"
+              formControlName="StartDate"
+            />
+            <!-- <br> -->
+          </div>
 
-
-                        <div class="form-group">
-                            <label >Coupon Start date</label>
-                            <input type="date" required (change)="startpick($event)" class="form-control" formControlName="StartDate" >
-                            <!-- <br> -->
-                        </div>
-
-                         <div class="form-group">
-                            <label >Coupon Expiry date</label>
-                            <input
-                                required
-                                type="date"
-                                [readonly]="firstpickstartdate"
-                                (click)="checkforstartpick()"
-                                class="form-control"
-                                [min]="mindate"
-                                formControlName="ExpiryDate"
-                            >
-                            <!-- <br> -->
-                        </div>                        
-                        <button type="submit"  class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
-                </div>
-            </div>
-        </div>
+          <div class="form-group">
+            <label>Coupon Expiry date</label>
+            <input
+              required
+              type="date"
+              [readonly]="firstpickstartdate"
+              (click)="checkforstartpick($event)"
+              class="form-control"
+              [min]="mindate"
+              formControlName="ExpiryDate"
+            />
+            <!-- <br> -->
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
